# PCL_Kinect2Kinfu

./: CMakeLists.txt
src/: CMakeLists.txt  kinfu_app.cpp  record_tsdfvolume.cpp
